--- a/src/lwc/gauExpenditureRow/gauExpenditureRow.html
+++ b/src/lwc/gauExpenditureRow/gauExpenditureRow.html
@@ -1,6 +1,44 @@
 <template>
-    <lightning-card>
-      <c-lookup onsearch={handleSearch} label="Search" placeholder="Search Salesforce">
-      </c-lookup>
-    </lightning-card>
+  <lightning-card>
+    <div class="slds-grid slds-gutters">
+      <div class="slds-col slds-size_7-of-12">
+        <div class="custom-lookup-style">
+          <c-lookup
+            onsearch={handleSearch}
+            onselectionchange={handleSelectionChange}
+            placeholder="General Accounting Units"
+          >
+          </c-lookup>
+          {gauId}
+        </div>
+      </div>
+      <div class="slds-col slds-size_2-of-12">
+        <lightning-input
+          type="number"
+          formatter="currency"
+          step="0.01"
+          onchange={amountChange}
+        ></lightning-input>
+        {amount}
+      </div>
+      <div class="slds-col slds-size_2-of-12">
+          <div class="slds-grid">
+            <div class="slds-col">
+              <lightning-input type="number" step="0.5"></lightning-input>
+            </div>
+            <div class="slds-col slds-shrink custom-percent-style">
+                %
+            </div>
+        </div>
+      </div>
+      <div class="slds-col slds-size_1-of-12">
+        <div class="custom-button-style">
+          <lightning-button
+            variant="destructive"
+            label="Delete"
+          ></lightning-button>
+        </div>
+      </div>
+    </div>
+  </lightning-card>
 </template>
