--- a/src/lwc/gauExpenditureRow/gauExpenditureRow.html
+++ b/src/lwc/gauExpenditureRow/gauExpenditureRow.html
@@ -1,18 +1,16 @@
 <template>
   <lightning-card>
-    <div class="slds-grid slds-gutters">
-      <div class="slds-col slds-size_7-of-12">
-        <div class="custom-lookup-style">
-          <c-lookup
-            onsearch={handleSearch}
-            onselectionchange={handleSelectionChange}
-            placeholder="General Accounting Units"
-          >
-          </c-lookup>
-          {gauId}
-        </div>
-      </div>
-      <div class="slds-col slds-size_2-of-12">
+    <lightning-layout vertical-align="end">
+      <lightning-layout-item padding="around-small" size="7">
+        <c-lookup
+          onsearch={handleSearch}
+          onselectionchange={handleSelectionChange}
+          placeholder="General Accounting Units"
+        >
+        </c-lookup>
+        {gauId}
+      </lightning-layout-item>
+      <lightning-layout-item padding="around-small" size="2">
         <lightning-input
           type="number"
           formatter="currency"
@@ -20,25 +18,23 @@
           onchange={amountChange}
         ></lightning-input>
         {amount}
-      </div>
-      <div class="slds-col slds-size_2-of-12">
-          <div class="slds-grid">
-            <div class="slds-col">
-              <lightning-input type="number" step="0.5"></lightning-input>
-            </div>
-            <div class="slds-col slds-shrink custom-percent-style">
-                %
-            </div>
+      </lightning-layout-item>
+      <lightning-layout-item padding="around-small" size="2">
+        <div class="slds-grid slds-grid_vertical-align-center">
+          <div class="slds-col">
+            <lightning-input type="number" step="0.5"></lightning-input>
+          </div>
+          <div class="slds-col slds-shrink slds-text-heading_small custom-percent-style">
+            %
+          </div>
         </div>
-      </div>
-      <div class="slds-col slds-size_1-of-12">
-        <div class="custom-button-style">
-          <lightning-button
-            variant="destructive"
-            label="Delete"
-          ></lightning-button>
-        </div>
-      </div>
-    </div>
+      </lightning-layout-item>
+      <lightning-layout-item padding="around-small" size="1">
+        <lightning-button
+          variant="destructive"
+          label="Delete"
+        ></lightning-button>
+      </lightning-layout-item>
+    </lightning-layout>
   </lightning-card>
 </template>
