fix labels, table header

--- a/force-app/main/default/lwc/manageExpenditures/manageExpenditures.html
+++ b/force-app/main/default/lwc/manageExpenditures/manageExpenditures.html
@@ -1,4 +1,5 @@
 <template>
   <c-manage-expenditures-header></c-manage-expenditures-header>
+  <c-manage-expenditures-table-header></c-manage-expenditures-table-header>
   <c-gau-expenditure-row></c-gau-expenditure-row>
 </template>
