--- a/force-app/main/default/lwc/gauExpenditureRow/gauExpenditureRow.html
+++ b/force-app/main/default/lwc/gauExpenditureRow/gauExpenditureRow.html
@@ -1,40 +1,42 @@
 <template>
-  <lightning-card>
-    <lightning-layout vertical-align="end">
-      <lightning-layout-item padding="around-small" size="7">
-        <c-lookup
-          onsearch={handleSearch}
-          onselectionchange={handleSelectionChange}
-          placeholder="General Accounting Units"
-        >
-        </c-lookup>
-        {gauId}
-      </lightning-layout-item>
-      <lightning-layout-item padding="around-small" size="2">
-        <lightning-input
-          type="number"
-          formatter="currency"
-          step="0.01"
-          onchange={amountChange}
-        ></lightning-input>
-        {amount}
-      </lightning-layout-item>
-      <lightning-layout-item padding="around-small" size="2">
-        <div class="slds-grid slds-grid_vertical-align-center">
-          <div class="slds-col">
-            <lightning-input type="number" step="0.5"></lightning-input>
-          </div>
-          <div class="slds-col slds-shrink slds-text-heading_small custom-percent-style">
-            %
-          </div>
+  <lightning-layout vertical-align="end" style="background-color: white;">
+    <lightning-layout-item padding="around-small" size="7">
+      <c-lookup
+        onsearch={handleSearch}
+        onselectionchange={handleSelectionChange}
+        placeholder="General Accounting Units"
+      >
+      </c-lookup>
+      {gauId}
+    </lightning-layout-item>
+    <lightning-layout-item padding="around-small" size="2">
+      <lightning-input
+        type="number"
+        formatter="currency"
+        step="0.01"
+        onchange={amountChange}
+        variant="label-hidden"
+      ></lightning-input>
+      {amount}
+    </lightning-layout-item>
+    <lightning-layout-item padding="around-small" size="2">
+      <div class="slds-grid slds-grid_vertical-align-center">
+        <div class="slds-col">
+          <lightning-input
+            type="number"
+            step="0.5"
+            variant="label-hidden"
+          ></lightning-input>
         </div>
-      </lightning-layout-item>
-      <lightning-layout-item padding="around-small" size="1">
-        <lightning-button
-          variant="destructive"
-          label="Delete"
-        ></lightning-button>
-      </lightning-layout-item>
-    </lightning-layout>
-  </lightning-card>
+        <div
+          class="slds-col slds-shrink slds-text-heading_small custom-percent-style"
+        >
+          %
+        </div>
+      </div>
+    </lightning-layout-item>
+    <lightning-layout-item padding="around-small" size="1">
+      <lightning-button variant="destructive" label="Delete"></lightning-button>
+    </lightning-layout-item>
+  </lightning-layout>
 </template>
