--- a/force-app/main/default/lwc/manageExpendituresTableHeader/manageExpendituresTableHeader.html
+++ b/force-app/main/default/lwc/manageExpendituresTableHeader/manageExpendituresTableHeader.html
@@ -1,22 +1,22 @@
 <template>
-  <div style="background-color:silver">
-    <lightning-layout>
+  <div style="background-color:rgb(250, 250, 249);">
+    <lightning-layout vertical-align="center" style="height:25px">
       <lightning-layout-item size="7" padding="horizontal-small">
         <div
-          class="slds-truncate slds-text-title_bold"
+          class="slds-truncate slds-text-title_caps"
           title="General Accounting Unit"
         >
-          General Accounting Unit
+          <b>General Accounting Unit</b>
         </div>
       </lightning-layout-item>
       <lightning-layout-item size="2" padding="horizontal-small">
-        <div class="slds-truncate slds-text-title_bold" title="Amount">
-          Amount
+        <div class="slds-truncate slds-text-title_caps" title="Amount">
+          <b>Amount</b>
         </div>
       </lightning-layout-item>
       <lightning-layout-item size="3" padding="horizontal-small">
-        <div class="slds-truncate slds-text-title_bold" title="Percent">
-          Percent
+        <div class="slds-truncate slds-text-title_caps" title="Percent">
+          <b>Percent</b>
         </div>
       </lightning-layout-item>
     </lightning-layout>
