--- a/force-app/main/default/lwc/manageExpenditures/manageExpenditures.html
+++ b/force-app/main/default/lwc/manageExpenditures/manageExpenditures.html
@@ -1,15 +1,20 @@
 <template>
   <c-manage-expenditures-header></c-manage-expenditures-header>
   <c-manage-expenditures-table-header></c-manage-expenditures-table-header>
-  <table
-    class="slds-table slds-table_cell-buffer slds-table_bordered slds-table_striped"
-  >
+  <table class="slds-table slds-table_cell-buffer slds-table_bordered">
     <tbody>
-      <tr class="slds-hint-parent">
-        <th data-label="Opportunity Name" scope="row">
-          <c-gau-expenditure-row></c-gau-expenditure-row>
-        </th>
-      </tr>
+      <template for:each={numbers} for:item="number">
+        <tr class="slds-hint-parent" key={number}>
+          <th scope="row">
+            <c-gau-expenditure-row
+              number={number}
+              ondelete={handleDelete}
+            ></c-gau-expenditure-row>
+          </th>
+        </tr>
+      </template>
     </tbody>
   </table>
+  <lightning-button variant="base" label="Add Row" onclick={addRow} class="slds-m-left_x-small"></lightning-button>
+
 </template>
