--- a/force-app/main/default/lwc/manageExpenditures/manageExpenditures.html
+++ b/force-app/main/default/lwc/manageExpenditures/manageExpenditures.html
@@ -15,6 +15,10 @@
       </template>
     </tbody>
   </table>
-  <lightning-button variant="base" label="Add Row" onclick={addRow} class="slds-m-left_x-small"></lightning-button>
-
+  <lightning-button
+    variant="base"
+    label="Add Row"
+    onclick={addRow}
+    class="slds-m-left_x-small"
+  ></lightning-button>
 </template>
