add passing data from VF to LWC

--- a/force-app/main/default/lwc/manageExpendituresHeader/manageExpendituresHeader.html
+++ b/force-app/main/default/lwc/manageExpendituresHeader/manageExpendituresHeader.html
@@ -8,7 +8,7 @@
               <a href="javascript:void(0);">Disbursements</a>
             </li>
             <li class="slds-breadcrumb__item">
-              <a onclick={handleCancel}>{parentname}</a>
+              <a href={url} onclick={handleCancel}>{parentname}</a>
             </li>
           </ol>
         </nav>
