--- a/force-app/main/default/lwc/manageExpenditures/manageExpenditures.html
+++ b/force-app/main/default/lwc/manageExpenditures/manageExpenditures.html
@@ -1,7 +1,7 @@
 <template>
   <c-manage-expenditures-header
+    parentid={parentid}
     parentname={parentName}
-    oncancel={handleCancel}
   ></c-manage-expenditures-header>
   {parentId}
   <c-manage-expenditures-table-header></c-manage-expenditures-table-header>
