pass expenditures VF to UI

--- a/force-app/main/default/lwc/manageExpenditures/manageExpenditures.html
+++ b/force-app/main/default/lwc/manageExpenditures/manageExpenditures.html
@@ -2,6 +2,7 @@
   <c-manage-expenditures-header
     parentname={parentName}
   ></c-manage-expenditures-header>
+  {gauExpenditures}
   <c-manage-expenditures-table-header></c-manage-expenditures-table-header>
   <table class="slds-table slds-table_cell-buffer slds-table_bordered">
     <tbody>
