--- a/force-app/main/default/lwc/manageExpenditures/manageExpenditures.html
+++ b/force-app/main/default/lwc/manageExpenditures/manageExpenditures.html
@@ -10,7 +10,7 @@
         <tr class="slds-hint-parent" key={gauExpenditure.recordId}>
           <th scope="row">
             <c-gau-expenditure-row
-              number={number}
+              prefill-expenditure={gauExpenditure}
               ondelete={handleDelete}
             ></c-gau-expenditure-row>
           </th>
