set up visual debugger mechanisms

--- a/force-app/main/default/lwc/gauExpenditureRow/gauExpenditureRow.html
+++ b/force-app/main/default/lwc/gauExpenditureRow/gauExpenditureRow.html
@@ -1,4 +1,10 @@
 <template>
+  <!-- for debugging purposes only -->
+  recordId: {gauExpenditure.recordId};
+  gauName: {gauExpenditure.gauName};
+  gauId: {gauExpenditure.gauId};
+  amount: {gauExpenditure.amount}
+  <!-- end debugger -->
   <lightning-layout vertical-align="end">
     <lightning-layout-item padding="horizontal-small" size="7">
       <c-lookup
