--- a/force-app/main/default/lwc/manageExpenditures/manageExpenditures.html
+++ b/force-app/main/default/lwc/manageExpenditures/manageExpenditures.html
@@ -2,7 +2,16 @@
   <c-manage-expenditures-header
     parentname={parentName}
   ></c-manage-expenditures-header>
-  {gaueString}
+  <!-- for debugging purposes only -->
+  <template for:each={gauExpenditures} for:item="gauExpenditure">
+    <p key={gauExpenditure.recordId}>
+      recordId: {gauExpenditure.recordId};
+      gauName: {gauExpenditure.gauName};
+      gauId: {gauExpenditure.gauId};
+      amount: {gauExpenditure.amount}<br/>
+    </p>
+  </template>
+  <!-- end debugger -->
   <c-manage-expenditures-table-header></c-manage-expenditures-table-header>
   <table class="slds-table slds-table_cell-buffer slds-table_bordered">
     <tbody>
