add/delete object rows

--- a/force-app/main/default/lwc/gauExpenditureRow/gauExpenditureRow.html
+++ b/force-app/main/default/lwc/gauExpenditureRow/gauExpenditureRow.html
@@ -1,7 +1,6 @@
 <template>
   <!-- for debugging purposes only -->
-  recordId: {gauExpenditure.recordId};
-  gauName: {gauExpenditure.gauName};
+  rowId: {gauExpenditure.rowId};
   gauId: {gauExpenditure.gauId};
   amount: {gauExpenditure.amount}
   <!-- end debugger -->
