refactor updates & deletes. support gau id update

--- a/force-app/main/default/lwc/manageExpenditures/manageExpenditures.html
+++ b/force-app/main/default/lwc/manageExpenditures/manageExpenditures.html
@@ -19,8 +19,8 @@
           <th scope="row">
             <c-gau-expenditure-row
               prefill-expenditure={gauExpenditure}
-              ondelete={handleDelete}
               onupdate={handleUpdate}
+              ondelete={handleUpdate}
             ></c-gau-expenditure-row>
           </th>
         </tr>
