track total amount

--- a/force-app/main/default/lwc/gauExpenditureRow/gauExpenditureRow.html
+++ b/force-app/main/default/lwc/gauExpenditureRow/gauExpenditureRow.html
@@ -20,6 +20,7 @@
         formatter="currency"
         step="0.01"
         onchange={amountChange}
+        onkeyup={enforceValidAmount}
         variant="label-hidden"
       ></lightning-input>
     </lightning-layout-item>
