track total amount

--- a/force-app/main/default/lwc/manageExpenditures/manageExpenditures.html
+++ b/force-app/main/default/lwc/manageExpenditures/manageExpenditures.html
@@ -31,7 +31,7 @@
             <lightning-layout-item padding="horizontal-small" size="7">
             </lightning-layout-item>
             <lightning-layout-item padding="horizontal-small" class="slds-m-left_small" size="2">
-              ${remainingAmount}
+              <lightning-formatted-number value={remainingAmount} format-style="currency" currency-code="USD"></lightning-formatted-number>
             </lightning-layout-item>
             <lightning-layout-item padding="horizontal-small" size="2">
             </lightning-layout-item>
