--- a/force-app/main/default/lwc/manageExpendituresHeader/manageExpendituresHeader.html
+++ b/force-app/main/default/lwc/manageExpendituresHeader/manageExpendituresHeader.html
@@ -53,7 +53,10 @@
                 </button>
               </li>
               <li>
-                <button class="slds-button slds-button_brand">
+                <button
+                  class="slds-button slds-button_brand"
+                  disabled={disableSave}
+                >
                   Save
                 </button>
               </li>
