--- a/force-app/main/default/lwc/gauExpenditureRow/gauExpenditureRow.html
+++ b/force-app/main/default/lwc/gauExpenditureRow/gauExpenditureRow.html
@@ -1,9 +1,9 @@
 <template>
-  <!-- for debugging purposes only -->
+  <!-- for debugging purposes only
   rowId: {gauExpenditure.rowId};
   gauId: {gauExpenditure.gauId};
   amount: {gauExpenditure.amount}
-  <!-- end debugger -->
+  end debugger -->
   <lightning-layout vertical-align="end">
     <lightning-layout-item padding="horizontal-small" size="7">
       <c-lookup
