--- a/force-app/main/default/lwc/manageExpenditures/manageExpenditures.html
+++ b/force-app/main/default/lwc/manageExpenditures/manageExpenditures.html
@@ -3,14 +3,14 @@
     parentname={parentName}
     disable-save={disableSave}
   ></c-manage-expenditures-header>
-  <!-- for debugging purposes only -->
+  <!-- for debugging purposes only
   <template for:each={gauExpenditures} for:item="gauExpenditure">
     <p key={gauExpenditure.recordId}>
       rowId: {gauExpenditure.rowId}; gauId: {gauExpenditure.gauId}; amount:
       {gauExpenditure.amount}<br />
     </p>
   </template>
-  <!-- end debugger -->
+  end debugger -->
   <c-manage-expenditures-table-header></c-manage-expenditures-table-header>
   <table class="slds-table slds-table_cell-buffer slds-table_bordered">
     <tbody>
@@ -57,4 +57,5 @@
     onclick={addRow}
     class="slds-m-left_x-small"
   ></lightning-button>
+  <div style="height:200px;"></div>
 </template>
