apex save method

--- a/force-app/main/default/lwc/gauExpenditureRow/gauExpenditureRow.html
+++ b/force-app/main/default/lwc/gauExpenditureRow/gauExpenditureRow.html
@@ -1,8 +1,7 @@
 <template>
   <!-- for debugging purposes only
-  rowId: {gauExpenditure.rowId};
-  gauId: {gauExpenditure.gauId};
-  amount: {gauExpenditure.amount}
+  rowId: {gauExpenditure.rowId}; gauId: {gauExpenditure.gauId}; amount:
+  {gauExpenditure.amount}
   end debugger -->
   <lightning-layout vertical-align="end">
     <lightning-layout-item padding="horizontal-small" size="7">
