javascript for insert, update, delete

--- a/force-app/main/default/lwc/manageExpenditures/manageExpenditures.html
+++ b/force-app/main/default/lwc/manageExpenditures/manageExpenditures.html
@@ -70,6 +70,7 @@
             <button
               class="slds-button slds-button_brand"
               disabled={disableSave}
+              onclick={handleSave}
             >
               Save
             </button>
