--- a/force-app/main/default/lwc/manageExpenditures/manageExpenditures.html
+++ b/force-app/main/default/lwc/manageExpenditures/manageExpenditures.html
@@ -1,16 +1,4 @@
 <template>
-  <!--<c-manage-expenditures-header
-    parentname={parentName}
-    disable-save={disableSave}
-  ></c-manage-expenditures-header>-->
-  <!-- for debugging purposes only
-  <template for:each={gauExpenditures} for:item="gauExpenditure">
-    <p key={gauExpenditure.recordId}>
-      rowId: {gauExpenditure.rowId}; gauId: {gauExpenditure.gauId}; amount:
-      {gauExpenditure.amount}<br />
-    </p>
-  </template>
-  end debugger -->
   <template if:true={isDisbursement}>
     <template if:true={loaded}>
       <template if:false={nonZeroAmount}>
@@ -75,6 +63,11 @@
                   onclick={handleSave}
                 >
                   Save Updates
+                  <lightning-icon
+                    icon-name="utility:save"
+                    alternative-text="Save"
+                    size="x-small"
+                  ></lightning-icon>
                 </button>
               </li>
               <li>
