--- a/force-app/main/default/lwc/gauExpenditureRow/gauExpenditureRow.html
+++ b/force-app/main/default/lwc/gauExpenditureRow/gauExpenditureRow.html
@@ -1,8 +1,4 @@
 <template>
-  <!-- for debugging purposes only
-  rowId: {gauExpenditure.rowId}; gauId: {gauExpenditure.gauId}; amount:
-  {gauExpenditure.amount}
-  end debugger -->
   <lightning-layout vertical-align="end">
     <lightning-layout-item padding="horizontal-small" size="7">
       <c-lookup
@@ -31,7 +27,7 @@
             onchange={percentChange}
             disabled={percentDisabled}
             type="number"
-            step="0.5"
+            step="0.000000001"
             variant="label-hidden"
           ></lightning-input>
         </div>
