--- a/force-app/main/default/lwc/gauExpenditureRow/gauExpenditureRow.html
+++ b/force-app/main/default/lwc/gauExpenditureRow/gauExpenditureRow.html
@@ -1,6 +1,12 @@
 <template>
-  <lightning-layout vertical-align="end">
+  <!-- empty div to balance padding -->
+  <div style="height:16px;"></div>
+  <!-- align @ start so error messages dont disrupt alignment-->
+  <lightning-layout vertical-align="start">
+    <!-- 7-2-2-1 layout pattern also matches c-manage-expenditures-header-->
+    <!-- lookup layout item -->
     <lightning-layout-item padding="horizontal-small" size="7">
+      <!-- lookup taken from https://github.com/pozil/sfdc-ui-lookup-lwc-->
       <c-lookup
         selection={prefillSelection}
         onsearch={handleSearch}
@@ -8,6 +14,7 @@
       >
       </c-lookup>
     </lightning-layout-item>
+    <!-- amount layout item -->
     <lightning-layout-item padding="horizontal-small" size="2">
       <lightning-input
         value={gauExpenditure.amount}
@@ -16,9 +23,11 @@
         type="number"
         formatter="currency"
         step="0.01"
+        min="0"
         variant="label-hidden"
       ></lightning-input>
     </lightning-layout-item>
+    <!-- percent layout item -->
     <lightning-layout-item padding="horizontal-small" size="2">
       <div class="slds-grid slds-grid_vertical-align-center">
         <div class="slds-col">
@@ -27,7 +36,8 @@
             onchange={percentChange}
             disabled={percentDisabled}
             type="number"
-            step="0.000000001"
+            step="0.0001"
+            max="100"
             variant="label-hidden"
           ></lightning-input>
         </div>
@@ -38,6 +48,7 @@
         </div>
       </div>
     </lightning-layout-item>
+    <!-- delete button layout item -->
     <lightning-layout-item padding="horizontal-small" size="1">
       <lightning-button
         variant="destructive"
@@ -45,5 +56,7 @@
         onclick={handleDelete}
       ></lightning-button>
     </lightning-layout-item>
+    <!-- div used to reserve room for error messages below inputs-->
+    <div style="height:51px;"></div>
   </lightning-layout>
 </template>
