total remaining amount label

--- a/force-app/main/default/lwc/manageExpenditures/manageExpenditures.html
+++ b/force-app/main/default/lwc/manageExpenditures/manageExpenditures.html
@@ -31,6 +31,12 @@
             <th scope="row">
               <lightning-layout vertical-align="end">
                 <lightning-layout-item padding="horizontal-small" size="7">
+                  <div
+                    class="slds-truncate slds-text-title_caps slds-float_right slds-p-bottom_xxx-small"
+                    title="General Accounting Unit"
+                  >
+                    <b>Total Amount Remaining:</b>
+                  </div>
                 </lightning-layout-item>
                 <lightning-layout-item padding="horizontal-small" size="2">
                   <!-- css class set dynamically in js controller -->
