--- a/force-app/main/default/lwc/gauExpenditureRow/gauExpenditureRow.html
+++ b/force-app/main/default/lwc/gauExpenditureRow/gauExpenditureRow.html
@@ -19,7 +19,6 @@
       <lightning-input
         value={gauExpenditure.amount}
         onchange={amountChange}
-        disabled={amountDisabled}
         type="number"
         formatter="currency"
         step="0.01"
@@ -34,11 +33,10 @@
           <lightning-input
             value={percent}
             onchange={percentChange}
-            disabled={percentDisabled}
             type="number"
             step="0.0001"
-            max="100"
             variant="label-hidden"
+            class="percent-field"
           ></lightning-input>
         </div>
         <div
